<resources>
    <string name="app_name">MyQuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_car_is_red">This car is red?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enter_your_answer_here">Enter your answer here</string>
    <string name="submit">submit</string>
    <string name="yellow">yellow</string>
    <string name="red">red</string>
    <string name="this_car_is">this car is</string>
    <string name="your_points">your_points</string>
    <string name="questions">questions</string>
    <string name="settings">settings</string>
    <string name="bluetooth">bluetooth</string>
    <string name="home">home</string>
    <string name="todo">TODO</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="my_profile">My profile</string>
    <string name="edit_question">Edit question</string>
    <string name="menu">menu</string>
    <string name="option">option</string>
    <string name="option2">option2</string>
    <string name="arrow_back">arrow_back</string>
</resources>