<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings" />

    <item
        android:id="@+id/main_menu_settings2"
        android:orderInCategory="100"
        android:title="@string/settings" />

    <item
        android:id="@+id/main_menu_settings3"
        android:orderInCategory="100"
        android:title="@string/settings" />

    <item
        android:id="@+id/bluetooth"
        android:icon="@drawable/ic_icon"
        android:orderInCategory="100"
        android:title="@string/bluetooth"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/arrow_back"
        android:icon="@drawable/ic_arrow_back"
        android:orderInCategory="100"
        android:title="@string/arrow_back"
        app:showAsAction="always" />

</menu>