<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondQuestionFragment">

    <TextView
        android:id="@+id/second_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/this_car_is_red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/your_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:hint="@string/enter_your_answer_here"
        app:layout_constraintTop_toBottomOf="@+id/second_question" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/download"
        app:layout_constraintBottom_toTopOf="@+id/second_question" />

</androidx.constraintlayout.widget.ConstraintLayout>